k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viatab-backend
  namespace: viatab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viatab-backend
  template:
    metadata:
      labels:
        app: viatab-backend
    spec:
      containers:
        - name: backend
          image: dogmeat2000/backend_viatab:latest
          ports:
            - containerPort: 8080
