k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.yml convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.yml convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/doc1-viatab-app-default: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: VITE_API_BASE_URL
              value: http://localhost:8080
          image: dogmeat2000/frontend_viatab:latest
          name: viatab-frontend
          ports:
            - containerPort: 80
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
