k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viatab-db
  namespace: viatab
spec:
  selector:
    app: viatab-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
