k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viatab-frontend
  namespace: viatab
spec:
  selector:
    app: viatab-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort
